feat: 更新README.md；添加更新计划文档

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,52 @@
-# Slack Bot
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_APP_TOKEN=xapp-your-slack-app-token
+# ============================================
+# Sleepless Agent 环境变量配置
+# ============================================
 
-# Claude Code CLI (optional - defaults to 'claude' from PATH)
-# CLAUDE_CODE_BINARY_PATH=/usr/local/bin/claude
+# --------------------------------------------
+# Claude Code 认证配置
+# --------------------------------------------
+# 方式 1: 订阅账号（推荐用于个人开发）
+#   需要先运行: claude login
+#   无需设置环境变量
 
-# Agent Config
+# 方式 2: API Key 认证（推荐用于团队/企业）
+#   设置以下环境变量：
+# ANTHROPIC_AUTH_TOKEN=sk-ant-your-api-key-here
+
+# 可选：使用 LLM Gateway（如 LiteLLM）
+# ANTHROPIC_BASE_URL=https://your-litellm-server:4000
+
+# 可选：动态 API Key（通过辅助脚本）
+# CLAUDE_CODE_API_KEY_HELPER=/path/to/get-api-key.sh
+# CLAUDE_CODE_API_KEY_HELPER_TTL_MS=3600000
+
+# --------------------------------------------
+# Slack Bot 配置（可选）
+# --------------------------------------------
+# 仅在使用 Slack 接口时需要配置
+# 如果只使用 CLI，可以跳过此部分
+
+# SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+# SLACK_APP_TOKEN=xapp-your-slack-app-token
+
+# --------------------------------------------
+# Agent 核心配置（必需）
+# --------------------------------------------
 AGENT_WORKSPACE_ROOT=./workspace
 AGENT_DB_PATH=./workspace/data/tasks.db
 AGENT_RESULTS_PATH=./workspace/data/results
 
-# Git
+# --------------------------------------------
+# Git 配置
+# --------------------------------------------
 GIT_USER_NAME=Sleepless Agent
 GIT_USER_EMAIL=agent@sleepless.local
 
-# Optional
+# --------------------------------------------
+# 可选配置
+# --------------------------------------------
 LOG_LEVEL=INFO
 DEBUG=false
+
+# 可选：Claude Code CLI 二进制路径（默认从 PATH 查找）
+# CLAUDE_CODE_BINARY_PATH=/usr/local/bin/claude
